parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> block main
Rule 2     main -> block
Rule 3     block -> declaration
Rule 4     block -> function
Rule 5     block -> assignment
Rule 6     block -> callfunction
Rule 7     block -> expressions
Rule 8     block -> if
Rule 9     block -> while
Rule 10    block -> dowhile
Rule 11    block -> for
Rule 12    block -> print
Rule 13    block -> input
Rule 14    block -> printq
Rule 15    block -> prints
Rule 16    block -> return
Rule 17    declaration -> type ids
Rule 18    declaration -> type arrays
Rule 19    type -> INT
Rule 20    type -> FLOAT
Rule 21    ids -> sorm COMMA ids
Rule 22    ids -> sorm
Rule 23    sorm -> moreids
Rule 24    sorm -> subdeclare
Rule 25    moreids -> ID
Rule 26    subdeclare -> assignment
Rule 27    arrays -> arrayorsub COMMA arrays
Rule 28    arrays -> arrayorsub
Rule 29    arrayorsub -> array
Rule 30    arrayorsub -> subdeclarem
Rule 31    array -> ID args
Rule 32    args -> LSQUARED expression RSQUARED args
Rule 33    args -> LSQUARED expression RSQUARED
Rule 34    subdeclarem -> ID args EQUALS arrvalue
Rule 35    arrvalue -> LCURLY value RCURLY
Rule 36    value -> numberorid COMMA value
Rule 37    value -> numberorid
Rule 38    function -> functionaux LCURLY main RCURLY
Rule 39    return -> RETURN
Rule 40    functionaux -> FUNCTION ID PARENS
Rule 41    assignment -> normalassignment
Rule 42    assignment -> plusplus
Rule 43    assignment -> minusminus
Rule 44    normalassignment -> idorarrayid EQUALS expression
Rule 45    idorarrayid -> ID
Rule 46    idorarrayid -> arrayid
Rule 47    plusplus -> ID PLUSPLUS
Rule 48    minusminus -> ID MINUSMINUS
Rule 49    callfunction -> ID PARENS
Rule 50    expression -> expression PLUS term
Rule 51    expression -> expression MINUS term
Rule 52    expression -> expression OR term
Rule 53    expression -> term
Rule 54    term -> term POWER factor
Rule 55    term -> term TIMES factor
Rule 56    term -> term DIVIDE factor
Rule 57    term -> term MOD factor
Rule 58    term -> term AND factor
Rule 59    term -> factor
Rule 60    factor -> numberorid
Rule 61    factor -> LPAREN expression RPAREN
Rule 62    factor -> numberorid GREATER numberorid
Rule 63    factor -> numberorid LESS numberorid
Rule 64    factor -> numberorid GREATEREQ numberorid
Rule 65    factor -> numberorid LESSEQ numberorid
Rule 66    factor -> numberorid EQUALEQ numberorid
Rule 67    factor -> numberorid NOTEQ numberorid
Rule 68    numberorid -> NUMBER
Rule 69    numberorid -> ID
Rule 70    numberorid -> arrayid
Rule 71    arrayid -> ID args
Rule 72    if -> IF LPAREN expression RPAREN if_aux1 LCURLY main RCURLY else
Rule 73    else -> ELSE if_aux2 LCURLY main RCURLY
Rule 74    else -> ELSE if_aux2 block
Rule 75    else -> empty
Rule 76    if_aux1 -> empty
Rule 77    if_aux2 -> empty
Rule 78    while -> WHILE while_aux1 LPAREN expression RPAREN while_aux2 LCURLY main RCURLY
Rule 79    while_aux1 -> empty
Rule 80    while_aux2 -> empty
Rule 81    dowhile -> DO do_aux LCURLY main RCURLY WHILE LPAREN expression RPAREN SEMIC
Rule 82    do_aux -> empty
Rule 83    for -> FOR LPAREN assignordeclare SEMIC expression SEMIC foraux1 assignment foraux2 RPAREN LCURLY main RCURLY
Rule 84    assignordeclare -> assignment
Rule 85    assignordeclare -> declaration
Rule 86    foraux1 -> empty
Rule 87    foraux2 -> empty
Rule 88    print -> PRINT printaux LPAREN expressions RPAREN
Rule 89    prints -> PRINTS printaux LPAREN expressions RPAREN
Rule 90    printaux -> empty
Rule 91    expressions -> stringorexpression COMMA expressions
Rule 92    expressions -> stringorexpression
Rule 93    stringorexpression -> string
Rule 94    stringorexpression -> expression
Rule 95    string -> STRING
Rule 96    input -> INPUT LPAREN input_ids RPAREN
Rule 97    input_ids -> numberorid COMMA input_ids
Rule 98    input_ids -> numberorid
Rule 99    empty -> <empty>
Rule 100   printq -> PRINTQ PARENS

Terminals, with rules where they appear

AND                  : 58
COMMA                : 21 27 36 91 97
DIVIDE               : 56
DO                   : 81
ELSE                 : 73 74
EQUALEQ              : 66
EQUALS               : 34 44
FLOAT                : 20
FOR                  : 83
FUNCTION             : 40
GREATER              : 62
GREATEREQ            : 64
ID                   : 25 31 34 40 45 47 48 49 69 71
IF                   : 72
INPUT                : 96
INT                  : 19
LCURLY               : 35 38 72 73 78 81 83
LESS                 : 63
LESSEQ               : 65
LPAREN               : 61 72 78 81 83 88 89 96
LSQUARED             : 32 33
MINUS                : 51
MINUSMINUS           : 48
MOD                  : 57
NOTEQ                : 67
NUMBER               : 68
OR                   : 52
PARENS               : 40 49 100
PLUS                 : 50
PLUSPLUS             : 47
POWER                : 54
PRINT                : 88
PRINTQ               : 100
PRINTS               : 89
RCURLY               : 35 38 72 73 78 81 83
RETURN               : 39
RPAREN               : 61 72 78 81 83 88 89 96
RSQUARED             : 32 33
SEMIC                : 81 83 83
STRING               : 95
TIMES                : 55
WHILE                : 78 81
error                : 

Nonterminals, with rules where they appear

args                 : 31 32 34 71
array                : 29
arrayid              : 46 70
arrayorsub           : 27 28
arrays               : 18 27
arrvalue             : 34
assignment           : 5 26 83 84
assignordeclare      : 83
block                : 1 2 74
callfunction         : 6
declaration          : 3 85
do_aux               : 81
dowhile              : 10
else                 : 72
empty                : 75 76 77 79 80 82 86 87 90
expression           : 32 33 44 50 51 52 61 72 78 81 83 94
expressions          : 7 88 89 91
factor               : 54 55 56 57 58 59
for                  : 11
foraux1              : 83
foraux2              : 83
function             : 4
functionaux          : 38
idorarrayid          : 44
ids                  : 17 21
if                   : 8
if_aux1              : 72
if_aux2              : 73 74
input                : 13
input_ids            : 96 97
main                 : 1 38 72 73 78 81 83 0
minusminus           : 43
moreids              : 23
normalassignment     : 41
numberorid           : 36 37 60 62 62 63 63 64 64 65 65 66 66 67 67 97 98
plusplus             : 42
print                : 12
printaux             : 88 89
printq               : 14
prints               : 15
return               : 16
sorm                 : 21 22
string               : 93
stringorexpression   : 91 92
subdeclare           : 24
subdeclarem          : 30
term                 : 50 51 52 53 54 55 56 57 58
type                 : 17 18
value                : 35 36
while                : 9
while_aux1           : 78
while_aux2           : 78

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . block main
    (2) main -> . block
    (3) block -> . declaration
    (4) block -> . function
    (5) block -> . assignment
    (6) block -> . callfunction
    (7) block -> . expressions
    (8) block -> . if
    (9) block -> . while
    (10) block -> . dowhile
    (11) block -> . for
    (12) block -> . print
    (13) block -> . input
    (14) block -> . printq
    (15) block -> . prints
    (16) block -> . return
    (17) declaration -> . type ids
    (18) declaration -> . type arrays
    (38) function -> . functionaux LCURLY main RCURLY
    (41) assignment -> . normalassignment
    (42) assignment -> . plusplus
    (43) assignment -> . minusminus
    (49) callfunction -> . ID PARENS
    (91) expressions -> . stringorexpression COMMA expressions
    (92) expressions -> . stringorexpression
    (72) if -> . IF LPAREN expression RPAREN if_aux1 LCURLY main RCURLY else
    (78) while -> . WHILE while_aux1 LPAREN expression RPAREN while_aux2 LCURLY main RCURLY
    (81) dowhile -> . DO do_aux LCURLY main RCURLY WHILE LPAREN expression RPAREN SEMIC
    (83) for -> . FOR LPAREN assignordeclare SEMIC expression SEMIC foraux1 assignment foraux2 RPAREN LCURLY main RCURLY
    (88) print -> . PRINT printaux LPAREN expressions RPAREN
    (96) input -> . INPUT LPAREN input_ids RPAREN
    (100) printq -> . PRINTQ PARENS
    (89) prints -> . PRINTS printaux LPAREN expressions RPAREN
    (39) return -> . RETURN
    (19) type -> . INT
    (20) type -> . FLOAT
    (40) functionaux -> . FUNCTION ID PARENS
    (44) normalassignment -> . idorarrayid EQUALS expression
    (47) plusplus -> . ID PLUSPLUS
    (48) minusminus -> . ID MINUSMINUS
    (93) stringorexpression -> . string
    (94) stringorexpression -> . expression
    (45) idorarrayid -> . ID
    (46) idorarrayid -> . arrayid
    (95) string -> . STRING
    (50) expression -> . expression PLUS term
    (51) expression -> . expression MINUS term
    (52) expression -> . expression OR term
    (53) expression -> . term
    (71) arrayid -> . ID args
    (54) term -> . term POWER factor
    (55) term -> . term TIMES factor
    (56) term -> . term DIVIDE factor
    (57) term -> . term MOD factor
    (58) term -> . term AND factor
    (59) term -> . factor
    (60) factor -> . numberorid
    (61) factor -> . LPAREN expression RPAREN
    (62) factor -> . numberorid GREATER numberorid
    (63) factor -> . numberorid LESS numberorid
    (64) factor -> . numberorid GREATEREQ numberorid
    (65) factor -> . numberorid LESSEQ numberorid
    (66) factor -> . numberorid EQUALEQ numberorid
    (67) factor -> . numberorid NOTEQ numberorid
    (68) numberorid -> . NUMBER
    (69) numberorid -> . ID
    (70) numberorid -> . arrayid

    ID              shift and go to state 22
    IF              shift and go to state 24
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    FOR             shift and go to state 29
    PRINT           shift and go to state 30
    INPUT           shift and go to state 31
    PRINTQ          shift and go to state 32
    PRINTS          shift and go to state 33
    RETURN          shift and go to state 34
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    FUNCTION        shift and go to state 37
    STRING          shift and go to state 41
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 45

    main                           shift and go to state 1
    block                          shift and go to state 2
    declaration                    shift and go to state 3
    function                       shift and go to state 4
    assignment                     shift and go to state 5
    callfunction                   shift and go to state 6
    expressions                    shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    dowhile                        shift and go to state 10
    for                            shift and go to state 11
    print                          shift and go to state 12
    input                          shift and go to state 13
    printq                         shift and go to state 14
    prints                         shift and go to state 15
    return                         shift and go to state 16
    type                           shift and go to state 17
    functionaux                    shift and go to state 18
    normalassignment               shift and go to state 19
    plusplus                       shift and go to state 20
    minusminus                     shift and go to state 21
    stringorexpression             shift and go to state 23
    expression                     shift and go to state 26
    idorarrayid                    shift and go to state 38
    string                         shift and go to state 39
    arrayid                        shift and go to state 40
    term                           shift and go to state 42
    factor                         shift and go to state 43
    numberorid                     shift and go to state 44

state 1

    (0) S' -> main .



state 2

    (1) main -> block . main
    (2) main -> block .
    (1) main -> . block main
    (2) main -> . block
    (3) block -> . declaration
    (4) block -> . function
    (5) block -> . assignment
    (6) block -> . callfunction
    (7) block -> . expressions
    (8) block -> . if
    (9) block -> . while
    (10) block -> . dowhile
    (11) block -> . for
    (12) block -> . print
    (13) block -> . input
    (14) block -> . printq
    (15) block -> . prints
    (16) block -> . return
    (17) declaration -> . type ids
    (18) declaration -> . type arrays
    (38) function -> . functionaux LCURLY main RCURLY
    (41) assignment -> . normalassignment
    (42) assignment -> . plusplus
    (43) assignment -> . minusminus
    (49) callfunction -> . ID PARENS
    (91) expressions -> . stringorexpression COMMA expressions
    (92) expressions -> . stringorexpression
    (72) if -> . IF LPAREN expression RPAREN if_aux1 LCURLY main RCURLY else
    (78) while -> . WHILE while_aux1 LPAREN expression RPAREN while_aux2 LCURLY main RCURLY
    (81) dowhile -> . DO do_aux LCURLY main RCURLY WHILE LPAREN expression RPAREN SEMIC
    (83) for -> . FOR LPAREN assignordeclare SEMIC expression SEMIC foraux1 assignment foraux2 RPAREN LCURLY main RCURLY
    (88) print -> . PRINT printaux LPAREN expressions RPAREN
    (96) input -> . INPUT LPAREN input_ids RPAREN
    (100) printq -> . PRINTQ PARENS
    (89) prints -> . PRINTS printaux LPAREN expressions RPAREN
    (39) return -> . RETURN
    (19) type -> . INT
    (20) type -> . FLOAT
    (40) functionaux -> . FUNCTION ID PARENS
    (44) normalassignment -> . idorarrayid EQUALS expression
    (47) plusplus -> . ID PLUSPLUS
    (48) minusminus -> . ID MINUSMINUS
    (93) stringorexpression -> . string
    (94) stringorexpression -> . expression
    (45) idorarrayid -> . ID
    (46) idorarrayid -> . arrayid
    (95) string -> . STRING
    (50) expression -> . expression PLUS term
    (51) expression -> . expression MINUS term
    (52) expression -> . expression OR term
    (53) expression -> . term
    (71) arrayid -> . ID args
    (54) term -> . term POWER factor
    (55) term -> . term TIMES factor
    (56) term -> . term DIVIDE factor
    (57) term -> . term MOD factor
    (58) term -> . term AND factor
    (59) term -> . factor
    (60) factor -> . numberorid
    (61) factor -> . LPAREN expression RPAREN
    (62) factor -> . numberorid GREATER numberorid
    (63) factor -> . numberorid LESS numberorid
    (64) factor -> . numberorid GREATEREQ numberorid
    (65) factor -> . numberorid LESSEQ numberorid
    (66) factor -> . numberorid EQUALEQ numberorid
    (67) factor -> . numberorid NOTEQ numberorid
    (68) numberorid -> . NUMBER
    (69) numberorid -> . ID
    (70) numberorid -> . arrayid

    $end            reduce using rule 2 (main -> block .)
    RCURLY          reduce using rule 2 (main -> block .)
    ID              shift and go to state 22
    IF              shift and go to state 24
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    FOR             shift and go to state 29
    PRINT           shift and go to state 30
    INPUT           shift and go to state 31
    PRINTQ          shift and go to state 32
    PRINTS          shift and go to state 33
    RETURN          shift and go to state 34
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    FUNCTION        shift and go to state 37
    STRING          shift and go to state 41
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 45

    block                          shift and go to state 2
    main                           shift and go to state 46
    declaration                    shift and go to state 3
    function                       shift and go to state 4
    assignment                     shift and go to state 5
    callfunction                   shift and go to state 6
    expressions                    shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    dowhile                        shift and go to state 10
    for                            shift and go to state 11
    print                          shift and go to state 12
    input                          shift and go to state 13
    printq                         shift and go to state 14
    prints                         shift and go to state 15
    return                         shift and go to state 16
    type                           shift and go to state 17
    functionaux                    shift and go to state 18
    normalassignment               shift and go to state 19
    plusplus                       shift and go to state 20
    minusminus                     shift and go to state 21
    stringorexpression             shift and go to state 23
    expression                     shift and go to state 26
    idorarrayid                    shift and go to state 38
    string                         shift and go to state 39
    arrayid                        shift and go to state 40
    term                           shift and go to state 42
    factor                         shift and go to state 43
    numberorid                     shift and go to state 44

state 3

    (3) block -> declaration .

    ID              reduce using rule 3 (block -> declaration .)
    IF              reduce using rule 3 (block -> declaration .)
    WHILE           reduce using rule 3 (block -> declaration .)
    DO              reduce using rule 3 (block -> declaration .)
    FOR             reduce using rule 3 (block -> declaration .)
    PRINT           reduce using rule 3 (block -> declaration .)
    INPUT           reduce using rule 3 (block -> declaration .)
    PRINTQ          reduce using rule 3 (block -> declaration .)
    PRINTS          reduce using rule 3 (block -> declaration .)
    RETURN          reduce using rule 3 (block -> declaration .)
    INT             reduce using rule 3 (block -> declaration .)
    FLOAT           reduce using rule 3 (block -> declaration .)
    FUNCTION        reduce using rule 3 (block -> declaration .)
    STRING          reduce using rule 3 (block -> declaration .)
    LPAREN          reduce using rule 3 (block -> declaration .)
    NUMBER          reduce using rule 3 (block -> declaration .)
    $end            reduce using rule 3 (block -> declaration .)
    RCURLY          reduce using rule 3 (block -> declaration .)


state 4

    (4) block -> function .

    ID              reduce using rule 4 (block -> function .)
    IF              reduce using rule 4 (block -> function .)
    WHILE           reduce using rule 4 (block -> function .)
    DO              reduce using rule 4 (block -> function .)
    FOR             reduce using rule 4 (block -> function .)
    PRINT           reduce using rule 4 (block -> function .)
    INPUT           reduce using rule 4 (block -> function .)
    PRINTQ          reduce using rule 4 (block -> function .)
    PRINTS          reduce using rule 4 (block -> function .)
    RETURN          reduce using rule 4 (block -> function .)
    INT             reduce using rule 4 (block -> function .)
    FLOAT           reduce using rule 4 (block -> function .)
    FUNCTION        reduce using rule 4 (block -> function .)
    STRING          reduce using rule 4 (block -> function .)
    LPAREN          reduce using rule 4 (block -> function .)
    NUMBER          reduce using rule 4 (block -> function .)
    $end            reduce using rule 4 (block -> function .)
    RCURLY          reduce using rule 4 (block -> function .)


state 5

    (5) block -> assignment .
